[tool.poetry]
name = "python-binding"
version = "0.1.0"
description = ""
authors = ["Vuong Nguyen <vuong.se@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
cffi = "^1.17.1"
cython = "^3.0.11"
invoke = "^2.2.0"
pybind11 = "^2.13.6"
pycparser = "^2.22"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
